# iac-security-auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  benchmark_data.py  client.py  env.py  grader.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
.kilocode/tasks/c3ea3120-7ab1-4e0f-91e3-c76343029ffe/: task_metadata.json
server/: __init__.py  app.py  iac_security_auditor_env_environment.py  requirements.txt
